# healing

./: pyproject.toml
doctor/: admin.py  models.py  urls.py  views.py
doctor/migrations/: 0001_initial.py  0002_opendate.py  0003_alter_opendate_date.py
doctor/templates/: doctor_signup.html  schedule.html
healing/: settings.py  urls.py
healing/templates/: base.html
patient/templates/: home.html
users/: urls.py  views.py
users/templates/: login.html  signup.html
