[tool.poetry]
name = "healing"
version = "0.1.0"
description = ""
authors = ["Gutto <guttolaudie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
isort = "^5.13.2"
ignr = "^2.2"
taskipy = "^1.12.2"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.18"
mkdocstrings = "^0.24.3"
mkdocstrings-python = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
